--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,10 @@ dependencies:
   firebase_storage: ^11.2.6
   shared_preferences: ^2.2.2
   connectivity_plus: ^5.0.2
+  flutter_spinkit: ^5.2.0
+  flutter_rating_bar: ^4.0.1
+  url_launcher: ^6.2.5
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
