--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,12 +17,12 @@ dependencies:
   provider: ^6.1.2
   custom_clippers: ^2.0.0
   image_picker: ^1.0.7
-  autocomplete_textfield: ^2.0.1
+  autocomplete_textfield:
   http: ^1.2.1
   firebase_core: ^2.27.1
   google_sign_in: ^6.1.4
   firebase_auth: ^4.17.4
-  cloud_firestore: ^4.8.5
+  cloud_firestore: ^4.15.0
   firebase_storage: ^11.2.6
   shared_preferences: ^2.2.2
   connectivity_plus: ^5.0.2
@@ -30,6 +30,8 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   url_launcher: ^6.2.5
   intl: ^0.19.0
+  flutter_svg: ^2.0.10+1
+  table_calendar: ^3.1.2
 
 dev_dependencies:
   flutter_test:
